Finished example with email address based cards.

--- a/riotjs-components/index.html
+++ b/riotjs-components/index.html
@@ -8,10 +8,16 @@
 </head>
 
 <body>
+    <es-avatar email="a@b.c"></es-avatar>
+    <es-avatar email="verylong.but.valid.email.address+disposable@mailinator.com"></es-avatar>
+    <es-avatar email="d@e.f"></es-avatar>
+    <es-avatar email="g@h.i"></es-avatar>
+    <es-avatar email="j@k.l"></es-avatar>
 
+    <script src="https://rawgit.com/blueimp/JavaScript-MD5/master/js/md5.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/riot@3.9.4/riot+compiler.min.js"></script>
+    <script src="components/avatar.tag" type="riot/tag"></script>
     <script src="js/index.js"></script>
-    <script>riot.mount('*')</script>
 </body>
 
 </html>
